VoiceOver does not work when the WebContent process is using NSRunLoop. https://bugs.webkit.org/show_bug.cgi?id=181331 <rdar://problem/36408004>

Reviewed by Brent Fulgham.

Source/WebCore/PAL:

Add NSApplication class method to initialize accessibility.

* pal/spi/mac/NSApplicationSPI.h:

Source/WebKit:

When the WebContent process is using NSRunLoop instead of the NSApplication run loop,
accessibility must be initialized for VoiceOver to work. This patch also switches to
using NSRunLoop in the WebContent process.

* Configurations/WebContentService.xcconfig:
* Platform/IPC/mac/ConnectionMac.mm:
(IPC::AccessibilityProcessSuspendedNotification): Remove unneccessary workaround.
* WebProcess/EntryPoint/mac/XPCService/WebContentService/Info-OSX.plist: Switch to NSRunLoop.
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeProcess): Initialize accessibility.



Canonical link: https://commits.webkit.org/197420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226807 268f45cc-cd09-0410-ab3c-d52691b4dbfc