Source/WebCore/PAL/pal/spi/mac/NSApplicationSPI.h
@@ -30,6 +30,10 @@
 - (void)speakString:(NSString *)string;
 - (void)_setCurrentEvent:(NSEvent *)event;
 
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101400
++ (void)_accessibilityInitialize;
+#endif
+
 @end
 
 #endif // USE(APPKIT)
