Source/WebKit/Platform/IPC/mac/ConnectionMac.mm
@@ -586,11 +586,6 @@ bool Connection::kill()
 static void AccessibilityProcessSuspendedNotification(bool suspended)
 {
 #if PLATFORM(MAC)
-#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101400
-    // Calling _AXUIElementNotifyProcessSuspendStatus will crash if the NSApplication event loop is not running.
-    if (![NSApp isRunning])
-        return;
-#endif
     _AXUIElementNotifyProcessSuspendStatus(suspended ? AXSuspendStatusSuspended : AXSuspendStatusRunning);
 #elif PLATFORM(IOS)
     UIAccessibilityPostNotification(kAXPidStatusChangedNotification, @{ @"pid" : @(getpid()), @"suspended" : @(suspended) });
